feat(admin): Added admin and garage CRUD
