# docs/swagger.json
@@ -8,6 +8,156 @@
     },
     "basePath": "/",
     "paths": {
+        "/admin/garage/add": {
+            "post": {
+                "description": "Add a new garage to the system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Garage"
+                ],
+                "summary": "Add a new garage",
+                "parameters": [
+                    {
+                        "description": "Garage request payload",
+                        "name": "garageReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AddGarageRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Garage added successful",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/garage/delete": {
+            "delete": {
+                "description": "Delete a garage by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Garage"
+                ],
+                "summary": "Delete a garage",
+                "parameters": [
+                    {
+                        "description": "Garage request payload",
+                        "name": "garageReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.DeletGarageReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Garage deleted successful",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "404": {
+                        "description": "Garage not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/garage/update": {
+            "put": {
+                "description": "Update a garage by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Garage"
+                ],
+                "summary": "Update a garage",
+                "parameters": [
+                    {
+                        "description": "Update request payload",
+                        "name": "updateReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateGarageReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Garage updated successful",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "404": {
+                        "description": "Garage not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    }
+                }
+            }
+        },
         "/car/buy": {
             "post": {
                 "security": [
@@ -1625,6 +1775,28 @@
                 }
             }
         },
+        "request.AddGarageRequest": {
+            "type": "object",
+            "properties": {
+                "coinsRequired": {
+                    "description": "coins required to unlock the garage",
+                    "type": "integer"
+                },
+                "garageName": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "level": {
+                    "description": "level reuired to unlock the garage",
+                    "type": "integer"
+                },
+                "longitute": {
+                    "type": "number"
+                }
+            }
+        },
         "request.CarRequest": {
             "type": "object",
             "properties": {
@@ -1660,6 +1832,14 @@
                     "type": "string"
                 },
                 "colorType": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.DeletGarageReq": {
+            "type": "object",
+            "properties": {
+                "garageId": {
                     "type": "string"
                 }
             }
@@ -1746,6 +1926,31 @@
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "request.UpdateGarageReq": {
+            "type": "object",
+            "properties": {
+                "coinsRequired": {
+                    "description": "coins required to unlock the garage",
+                    "type": "integer"
+                },
+                "garageId": {
+                    "type": "string"
+                },
+                "garageName": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "level": {
+                    "description": "level reuired to unlock the garage",
+                    "type": "integer"
+                },
+                "longitute": {
+                    "type": "number"
                 }
             }
         },
